# Air_Quality_Deployment

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
1. Official Guidelines and Documents/: Monitoring Stations.xlsx  Official Guidelines for Presenting Data.ods
2. Data Collection/: AJM_merged_imputed.xlsx  MPA_merged_imputed.xlsx  SAG_merged_imputed.xlsx  TLA_merged_imputed.xlsx  UIZ_merged_imputed.xlsx  XAL_merged_imputed.xlsx
2.Data_Collection/: HGM_merged_imputed.xlsx  MER_merged_imputed.xlsx  MGH_merged_imputed.xlsx  Mexico_city_data_with_festivals_Manual.csv  PED_merged_imputed.xlsx  SFE_merged_imputed.xlsx
3. Data Analysis/: EDA Air Quaility Mexico City.ipynb  Isolation Forest and LOF Outlier Detection Analysis.ipynb
3.Data_Analysis/: README.md
3.Data_Analysis/Stations Time Series EDA/: Time Series Stations EDA.ipynb
4. Model Development/: model_development_lightgbm.ipynb
4. Model Development/models/: CO_BJU_model_.pkl  CO_MPA_model_.pkl  CO_UIZ_model_.pkl  NO2_BJU_model_.pkl  NO2_MER_model_.pkl  NO2_UIZ_model_.pkl  O3_SFE_model_.pkl  O3_UIZ_model_.pkl  PM10_AJM_model_.pkl  PM10_MER_model_.pkl  PM10_MGH_model_.pkl  PM10_PED_model_.pkl  PM10_TLA_model_.pkl  PM10_XAL_model_.pkl  PM25_MPA_model_.pkl  PM25_SFE_model_.pkl  PM25_TLA_model_.pkl  SO2_MPA_model_.pkl  SO2_SAG_model_.pkl  (+2 more)
5. Model Deployment/: Main_landing_page_custom.py
5.Model_Deployment/: cdmx_zones.geojson
Main_dashboard/: Dashboard_README  Main_landing_page_custom.py  cdmx_zones.geojson  requirements.txt
app_example/: Readme.md  price_opt.py
(+90 files in other folders)
