[project]
name = "air-quality-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
    "shapely>=2.0.6",
    "streamlit-folium>=0.24.0",
    "streamlit-plotly-mapbox-events>=0.1.2",
    "streamlit>=1.41.1",
]
