[project]
name = "air-quality-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altair>=5.5.0",
    "babel>=2.16.0",
    "cmake>=3.31.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openmeteo-requests>=1.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "seaborn>=0.13.2",
    "shapely>=2.0.6",
    "streamlit-folium>=0.24.0",
    "streamlit-plotly-mapbox-events>=0.1.2",
    "streamlit>=1.41.1",
]
